The makings of the log in functionality

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,6 +9,11 @@
     android:id="@+id/login_layout"
     tools:context="edu.uw.connerjm.destinyguns.LoginActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN FRAGMENT!"/>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
