--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,4 +11,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="edu.uw.connerjm.destinyguns.LoginActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN ACTIVITY!"/>
 </RelativeLayout>
