--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REGISTER FRAGMENT!"/>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
