--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context=".MainActivity">
 
-    <item android:id="@+id/action_add_user"
-          android:title="@string/add_user"
-          app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_settings"
+          android:title="@string/settings"
+          app:showAsAction="never" />
 </menu>
