--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.uw.connerjm.destinyguns.LoginActivity">
+    style="@style/ActivityStyles"
+    tools:context="edu.uw.connerjm.destinyguns.Activities.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
