--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.uw.connerjm.destinyguns.MainActivity">
+    style="@style/ActivityStyles"
+    tools:context="edu.uw.connerjm.destinyguns.Activities.MainActivity">
 
     <TextView
         android:text="MAIN ACTIVITY!"
