--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:id="@+id/login_layout"
-    tools:context="edu.uw.connerjm.destinyguns.LoginActivity">
+    tools:context="edu.uw.connerjm.destinyguns.Activities.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,6 +18,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/EditTextStyle"
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/email_login"
@@ -27,6 +28,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/EditTextStyle"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password_login"
@@ -41,7 +43,7 @@
         android:layout_gravity="center">
 
         <Button
-            style="?android:attr/buttonStyleSmall"
+            style="@style/ButtonStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -49,7 +51,7 @@
             android:id="@+id/confirm_login_button"/>
 
         <Button
-            style="?android:attr/buttonStyleSmall"
+            style="@style/ButtonStyle"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
