--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,6 +15,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/EditTextStyle"
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/email_register"
@@ -24,12 +25,14 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/EditTextStyle"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password_register"
         android:hint="password" />
 
     <Button
+        style="@style/ButtonStyle"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Register"
