--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,20 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/grey</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/orange</item>
+        <item name="android:textColor">@color/orange</item>
     </style>
-
+    <style name="ActivityStyles" parent="AppTheme">
+        <item name="android:background">@color/black</item>
+    </style>
+    <style name="EditTextStyle" parent="AppTheme">
+        <item name="android:editTextColor">@color/orange</item>
+        <item name="android:textColorHint">@color/orange</item>
+    </style>
+    <style name="ButtonStyle" parent="AppTheme">
+        <item name="android:background">@color/grey</item>
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
