--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="LOGIN FRAGMENT!"/>
+        android:text="Welcome Back!"/>
 
     <EditText
         android:layout_width="wrap_content"
