--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context=".MainActivity">
 
+    <item android:id="@+id/action_info"
+          android:title="@string/information"
+          app:showAsAction="never" />
+
     <item android:id="@+id/action_logout"
           android:title="@string/logout"
           app:showAsAction="never" />
