Reformatted and cleaned up a lot of code and comments. Also added the info activity and changed that a bit. Also started to prep main activity for the real list stuff to happen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
     tools:context="edu.uw.connerjm.destinyguns.Activities.MainActivity">
 
     <TextView
-        android:text="MAIN ACTIVITY!"
+        android:text="@string/refine"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
