--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -68,13 +68,10 @@
 
     </LinearLayout>
 
-    <EditText
-        android:layout_width="match_parent"
+    <Spinner
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        style="@style/EditTextStyle"
-        android:ems="10"
-        android:id="@+id/console_register"
-        android:hint="@string/console" />
+        android:id="@+id/console_register" />
 
     <Button
         style="@style/ButtonStyle"
