--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -35,6 +35,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:padding="15dp"
+                android:text="@string/bug_report"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:clickable="true"
                 android:text="@string/bug_report_paragraph"/>
