Created a new fragment that will be for the weapon that is selected from the list and it will show all of the details about that given weapon. Yet to incorporate it into the app yet. Cleaned code in a few classes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="black">#000000</color>
     <color name="orange">#FF8C00</color>
     <color name="debug">#FF00FF</color>
+    <color name="legendary">#CF41BE</color>
+    <color name="exotic">#FAC029</color>
 </resources>
