Implimented the call to server and parsing json. It doesnt work completely. For some reason, it will not work if the gun title has a space in it. and it doesn't get the stats and gatedfor for whatever reason.

--- a/app/src/main/res/layout/fragment_weapon_detail.xml
+++ b/app/src/main/res/layout/fragment_weapon_detail.xml
@@ -172,7 +172,13 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textSize="18sp"
-                android:text="@string/details"
+                android:text="@string/details"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textSize="18sp"
                 android:id="@+id/detail_details_text"/>
 
         </LinearLayout>
