Added the functionality of submitting a bug report using content sharing to a mail application. Can't really test it too well because of the emulator.

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:clickable="true"
+                android:id="@+id/bug_report_text"
                 android:text="@string/bug_report_paragraph"/>
 
         </LinearLayout>
