--- a/app/src/main/res/layout/fragment_weapon_detail.xml
+++ b/app/src/main/res/layout/fragment_weapon_detail.xml
@@ -182,6 +182,100 @@
                 android:textSize="18sp"
                 android:id="@+id/detail_details_text"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textSize="18sp"
+                android:text="@string/voterank"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="1"
+                    android:id="@+id/one_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="2"
+                    android:id="@+id/two_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="3"
+                    android:id="@+id/three_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="4"
+                    android:id="@+id/four_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="5"
+                    android:id="@+id/five_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="6"
+                    android:id="@+id/six_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="7"
+                    android:id="@+id/seven_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="8"
+                    android:id="@+id/eight_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="9"
+                    android:id="@+id/nine_button"/>
+
+                <Button
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:text="10"
+                    android:id="@+id/ten_button"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </ScrollView>
