--- a/app/src/main/res/layout/fragment_weapon_detail.xml
+++ b/app/src/main/res/layout/fragment_weapon_detail.xml
@@ -35,6 +35,13 @@
                 android:textStyle="italic"
                 android:id="@+id/detail_flavour_text"/>
 
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/detail_picture"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
